# Game_TP

./: .gitignore  README  README.md
.gitignore/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
.gitignore/Game.dir/: DependInfo.cmake  build.make  link.txt
Architecture/: game_architecture.txt
Project/: CMakeLists.txt  main  main.cpp
Project/Game/: CMakeLists.txt  ComposeUnits.cpp  ComposeUnits.h  Human.cpp  Human.h  Knight.cpp  Knight.h  Magician.cpp  Magician.h  Monster.cpp  Monster.h  Princess.cpp  Princess.h  Unit.cpp  Unit.h  UnitFactory.cpp  UnitFactory.h
Project/src/: CMakeLists.txt  ComposeUnits.cpp  Fight.cpp  GameCommand.cpp  Human.cpp  Knight.cpp  Magician.cpp  Monster.cpp  Princess.cpp  Unit.cpp
